fixed bugs with horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,12 @@
 .container {
     display: flex;
     margin-bottom: 100px;
-    justify-content: space-between;
-    white-space: nowrap;
     overflow-x: scroll;
     overflow-y: hidden;
 }
 
 .content {
-    margin-right: 20px;
-    margin-bottom: 10px;
+    margin:10px;
     text-align: center;
     background: #646478;
     color: white;
@@ -26,8 +23,6 @@
 
 .pokemonIMG {
     padding: 0 50px;
-    height: 20%;
-    width: auto;
 }
 
 .search {
